<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enterNumber1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/enterNumber1"
        android:inputType="number" />

    <EditText
        android:id="@+id/enterNumber2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterNumber1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/enterNumber2"
        android:inputType="number" />

    <TextView
        android:id="@+id/result"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/output"
        android:layout_alignStart="@+id/enterNumber2"
        android:gravity="center"
        android:text="@string/Result"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/output"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_alignEnd="@+id/enterNumber2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/mulButton"
        android:layout_marginTop="240dp"
        android:background="@color/buttonColor"
        android:onClick="onAddButtonClick"
        android:text="@string/add" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/divButton"
        android:layout_alignTop="@+id/addButton"
        android:background="@color/buttonColor"
        android:onClick="onSubButtonClick"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/mulButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="194dp"
        android:layout_marginStart="53dp"
        android:background="@color/buttonColor"
        android:onClick="onMulButtonClick"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/divButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/mulButton"
        android:layout_marginEnd="57dp"
        android:background="@color/buttonColor"
        android:onClick="onDivButtonClick"
        android:text="@string/divide" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mulButton"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonColor"
        android:onClick="onClearButtonClick"
        android:text="@string/clear" />

</RelativeLayout>
